vendor/asupersync/asupersync-macros/tests/compile_fail/scope_missing_body.rs
use asupersync_macros::scope;

fn main() {
    // scope! requires a body block
    scope!(cx, "name");
}
